--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.0.0",
+    "truffle": "^5.5.16",
     "web3": "^1.5.2"
   },
   "devDependencies": {
